Bug #3669
closedfor local auditors, LA_FLG_BINDTO does not audit all symbol bindings
100%
Description
From the Joyent bug report:
For non-global link auditors, returning LA_FLG_BINDTO for the audited object should allow all symbol bindings to the object to be audited. However, this does not in fact function: because global auditing is not in place, other objects will not have LA_FLG_BINDFROM set and the symbol bindings will not be audited. This is a bug: there is no reason to not allow symbol auditing to take place, provided that the local auditor can deal with an anonymous binding (that is, the reference cookie will be NULL). We have no code today that relies on the current behavior (indeed, we have no local auditors today); it seems entirely reasonable to change this to match the expected semantics, though it may also be reasonable to bump the version number (currently 5) to reflect the change.
Updated by Robert Mustacchi over 8 years ago
- Status changed from New to Resolved
- % Done changed from 90 to 100
Resolved in 38f4bddda7216cf3550c325e8cabe56d08a2bce9.